# entelect-challenge-tower-defence

./: .gitignore  Cargo.toml  Makefile  README.md  bot.json  import-replay.sh  license.org  readme.org
benches/: engine.rs
src/: json.rs  lib.rs  main.rs  state_json.rs
src/engine/: bitwise_engine.rs  command.rs  constants.rs  expressive_engine.rs  geometry.rs  mod.rs  settings.rs  status.rs
src/input/: json.rs  mod.rs  textmap.rs
src/strategy/: mod.rs  monte_carlo.rs  monte_carlo_tree.rs  sample.rs  static_opening.rs
tests/: bigstate.json  expressive_to_bitwise_comparison.rs  live-comparison.rs  live_comparison.rs  monte-carlo-test.rs  monte_carlo_test.rs  state0.json  state1.json  state10.json  state11.json  state12.json  state13.json  state14.json  state15.json  state16.json  state17.json  state18.json  state19.json  state2.json  state20.json  state21.json  state22.json  state23.json  state24.json  state25.json  state26.json  state27.json  state28.json  state29.json  state3.json  state30.json  state4.json  state5.json  state6.json  state7.json  state8.json  state9.json
tests/after_112/Round 012/: PlayerCommand.txt
tests/after_112/Round 019/: PlayerCommand.txt
tests/after_112/Round 028/: PlayerCommand.txt
tests/after_112/Round 034/: PlayerCommand.txt
tests/after_112/Round 035/: OpponentCommand.txt
tests/after_112/Round 036/: PlayerCommand.txt
tests/after_112/Round 037/: PlayerCommand.txt
tests/after_112/Round 043/: OpponentCommand.txt
tests/after_112/Round 050/: PlayerCommand.txt
tests/after_112_2/Round 029/: PlayerCommand.txt
tests/after_112_2/Round 030/: OpponentCommand.txt
tests/after_112_2/Round 044/: PlayerCommand.txt
(+159 files in other folders)
