[package]
name = "zombot"
version = "1.0.0"

[dependencies]
serde_derive = "1.0.43"
serde = "1.0.43"
serde_json = "1.0.16"

rand = "0.4.2"
time = "0.1.4"
rayon = "1.0.1"

[dev-dependencies]
proptest = "0.7.2"

[features]
benchmarking = []
single-threaded = []
energy-cutoff = []
reduced-time = []
extended-time = []
discard-poor-performers = []

default = ["energy-cutoff"]

[profile.release]
debug = true