[package]
name = "zombot"
version = "2.0.0"

[dependencies]
serde_derive = "1.0.71"
serde = "1.0.71"
serde_json = "1.0.26"

rand = "0.5.5"
time = "0.1.4"
rayon = "1.0.2"

arrayvec = "0.4.7"

[dev-dependencies]
proptest = "0.8.4"

[features]
benchmarking = []
single-threaded = []
energy-cutoff = []
reduced-time = []
extended-time = []
discard-poor-performers = []

default = ["energy-cutoff", "discard-poor-performers"]

[profile.release]
debug = true